--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Amil Silahic",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.3.1",
     "body-parser": "^1.14.1",
     "connect-flash": "^0.1.1",
     "ejs": "^2.3.4",
@@ -21,5 +22,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^3.1.0",
     "purecss": "^1.0.0"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.3.1"
   }
 }
